@@ -22,6 +22,7 @@ namespace GitUI
 
             int x = 0;
             int y = 0;
+            const int labelHeight = 20;
             const int imageHeight = 47;
             const int imageWidth = 96;
             var translations = new List<string>(Translator.GetAllTranslations()) {"English"};
@@ -45,26 +46,35 @@ namespace GitUI
                 translationImage.Cursor = Cursors.Hand;
                 translationImage.Tag = translation;
                 translationImage.Click += translationImage_Click;
-                
-                new ToolTip().SetToolTip(translationImage, translation);
 
                 Controls.Add(translationImage);
+
+                Label label = new Label();
+                label.Text = translation;
+                label.Tag = translation;
+                label.Left = translationImage.Left;
+                label.Width = translationImage.Width;
+                label.Top = translationImage.Bottom;
+                label.Height = labelHeight;
+                label.TextAlign = ContentAlignment.TopCenter;
+                label.Click += translationImage_Click;
+                Controls.Add(label);
 
                 x += imageWidth + 6;
                 if (x > imageWidth * 4)
                 {
                     x = 0;
-                    y += imageHeight + 6;
+                    y += imageHeight + 6 + labelHeight;
                 }
             }
 
-            Height = 34 + y + imageHeight + SystemInformation.CaptionHeight + 37;
+            Height = 34 + y + imageHeight + labelHeight + SystemInformation.CaptionHeight + 37;
             label2.Top = Height - SystemInformation.CaptionHeight - 25;
         }
 
         void translationImage_Click(object sender, EventArgs e)
         {
-            Settings.Translation = ((PictureBox)sender).Tag.ToString();
+            Settings.Translation = ((Control)sender).Tag.ToString();
             Close();
         }
 
